<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">爱上街</string>
    <string name="fw_app_id">id</string>
    <string name="fw_app_time">time</string>
    <string name="fw_app_sign">sign</string>
    <string name="fw_app_version">appVersion</string>
    <string name="fw_app_user_name">userName</string>
    <string name="fw_app_network_type">netType</string>
    <string name="fw_app_uuid">uuid</string>
    <string name="fw_app_phoneType">phoneType</string>
    <string name="fw_app_sysVersion">sysVersion</string>
    <string name="fw_app_latLng">latLng</string>
    <string name="fw_app_gps">gps</string>
    <string name="bank_card_scan_recognize">重新识别</string>
    <string name="sure">确认</string>
    <string name="ensure_bank_card_num">核对卡号</string>
    <string name="guide_btn_start">立即进入</string>
    <string name="splash_ad_time">%1$d 秒</string>
    <string name="dialog_pwd_title">选择支付方式</string>
    <string name="dialog_pwd_title_other_pay">选择还款方式</string>
    <string name="dialog_pwd_title_other_pay_amount_format">支付金额¥%s</string>
    <string name="dialog_pay_confirm_title">确认付款</string>
    <string name="dialog_pay_confirm_combination_title">组合支付</string>
    <string name="dialog_pay_confirm_promote_title">提升额度</string>
    <string name="dialog_pay_confirm_order_title">订单金额</string>
    <string name="dialog_pay_confirm_quota_title">额度支付:¥%s</string>
    <string name="dialog_pay_confirm_bank_title">银行卡支付</string>
    <string name="dialog_pay_confirm_bank_amount">银行卡支付:¥%s</string>
    <string name="dialog_pay_confirm_other_title">其他支付方式</string>
    <string name="dialog_pay_confirm_quota_nper_item_title">信用分期</string>
    <string name="dialog_pay_confirm">确认付款</string>
    <string name="dialog_pay_confirm_combination">确认支付</string>
    <string name="dialog_pay_select_bank">添加银行卡</string>
    <string name="dialog_pay_select_bank_title_select">选择银行卡</string>
    <string name="dialog_pay_select_bank_toast_support_N">暂不支持%1$s卡哦～</string>
    <string name="dialog_pay_select_bank_tip_support_N">暂不支持%1$s卡</string>
    <string name="dialog_pay_confirm_bank_tip_support_N">暂不支持%1$s卡，请切换或添加其他银行卡</string>
    <string name="tab_bottom_tv_home">首页</string>
    <string name="tab_bottom_tv_brand">分类</string>
    <string name="tab_bottom_tv_group">分期商城</string>
    <string name="tab_bottom_tv_search">搜索</string>
    <string name="tab_bottom_tv_haitao">海淘馆</string>
    <string name="tab_bottom_tv_mine">我的</string>
    <string name="tab_bottom_tv_gold">赚金币</string>
    <string name="home_hint_search">输入商品名称</string>
    <string name="home_hint_search2">搜索你要的商品</string>
    <string name="home_tool_first_title">每日签到</string>
    <string name="home_tool_second_title">手机充值</string>
    <string name="home_tool_third_title">9.9包邮</string>
    <string name="home_tool_fourth_title">品牌特卖</string>
    <string name="home_tool_five_title">邀请好友</string>
    <string name="home_one_many_more">查看更多</string>
    <string name="home_activity_time_formatter">%1$d天%2$d时%3$d分%4$d秒</string>
    <string name="home_activity_start">距开始仅剩：</string>
    <string name="home_activity_end">距结束仅剩：</string>
    <string name="brand_top_bar_title">吃玩住行</string>
    <string name="brand_item_info_rebate">最高返</string>
    <string name="toast_get_brand_url_err">获取商城信息失败,请重试</string>
    <string name="toast_get_order_err">获取订单信息失败,请重试</string>
    <string name="toast_pay_timeout">订单超时,请重新下单</string>
    <string name="toast_list_brand_empty_tip">暂无店铺哦~</string>
    <string name="text_item_use">去使用</string>
    <string name="text_item_use_title">最近使用</string>
    <string name="brand_pay_success_title">提交成功</string>
    <string name="tip_pay_success_title">支付处理中</string>
    <string name="tip_pay_success_msg">您提交的支付已在处理中,需要等待几分钟。\n支付成功后将自动更改订单状态</string>
    <string name="text_btn_return_to_home">返回首页</string>
    <string name="text_btn_goto_order">查看订单</string>
    <string name="brand_pay_info_title">选择付款方式</string>
    <string name="cashier_title">收银台</string>
    <string name="search_title">搜索淘宝商品</string>
    <string name="search_rebate_title">购物最高返利80%</string>
    <string name="search_search">搜索</string>
    <string name="search_hit_search">输入商品名称</string>
    <string name="search_hot_search">热门搜索</string>
    <string name="search_rebate_tip">返利小贴士</string>
    <string name="search_rebate_guide">详细教程</string>
    <string name="search_delete_history_success">删除成功</string>
    <string name="search_goods_list_sort_all">综合</string>
    <string name="search_goods_list_sort_sale">销量</string>
    <string name="search_goods_list_sort_shop">店铺</string>
    <string name="search_shop_list_in">进入店铺</string>
    <string name="toast_search_shop_none">获取店铺信息失败，请重试</string>
    <string name="pay_success_toast">付款成功</string>
    <string name="stage_top_bar_title">分呗</string>
    <string name="stage_top_bar_detail">明细</string>
    <string name="stage_available_waiting">审核中</string>
    <string name="stage_available_title">可用额度(元)</string>
    <string name="stage_credit_title">信用额度%s元</string>
    <string name="stage_auth_waiting">正在快马加鞭审核中..</string>
    <string name="stage_raise_crash">提升信用额度</string>
    <string name="stage_loan_crash">去借钱</string>
    <string name="stage_bill_detail_title">查看详情</string>
    <string name="stage_loan_bill">分期账单</string>
    <string name="stage_all_bill">全部</string>
    <string name="stage_refund">本期待还</string>
    <string name="stage_refund_now">马上还款</string>
    <string name="stage_refund_now_time">请在%1$s天内还款</string>
    <string name="stage_refund_idf_title">去认证</string>
    <string name="stage_limit_low_title">无额度</string>
    <string name="stage_limit_low_tips">您的综合信用有待提升</string>
    <string name="stage_limit_low_time">评估时间 %1$s</string>
    <string name="stage_refund_idf_toast">实名认证出错</string>
    <string name="stage_refund_no_idf_tips">完成认证获得最高20000的借款额度</string>
    <string name="stage_credit">人人征信值</string>
    <string name="stage_loan_apply_toast">您的借款申请成功。3个工作日内会完成审核，请及时关注审核进度。如通过会打款至您的绑定银行卡，请知悉。</string>
    <string name="stage_quota_list_empty_tip">暂无数据哦~</string>
    <string name="stage_loan_crash_err">您未绑定主卡</string>
    <string name="stage_header_right_text">帮助中心</string>
    <string name="stage_header_title_text">爱花</string>
    <string name="stage_bottom_menu_history_bill">历史账单</string>
    <string name="stage_bottom_menu_record_rabate">返利记录</string>
    <string name="stage_bottom_menu_record_repayments">退还款记录</string>
    <string name="stage_bottom_menu_bill_date_modify">修改账单日</string>
    <string name="repayment_overdue_first">逾期账单还清后，才能查看</string>
    <string name="stage_auth_submit_hint">温馨提示，您需要完成上述基础认证才可以提交审核</string>
    <string name="stage_auth_wait">预计3分钟完成审核</string>
    <string name="stage_auth_ing">审核中</string>
    <string name="stage_auth_limit_0">信用额度0.00元</string>
    <string name="stage_auth_fail_try">基础认证审核失败，点击重试</string>
    <string name="stage_no_available">暂无</string>
    <string name="stage_repay_next_month">还下月账单</string>
    <string name="stage_goto_repay">立即还款</string>
    <string name="stage_have_overdue_month">您有%1$d个月的逾期账单</string>
    <string name="stage_loan_limit">借吧可用额度</string>
    <string name="stage_buy_limit">花吧可用额度</string>
    <string name="stage_limit_promot_hint">您有一个临时提额包哦~</string>
    <string name="stage_limit_promot_hint_amout">已领取临时额度%s元</string>
    <string name="stage_limit_promot_use_amout">待还临时额度%s元</string>
    <string name="stage_limit_click_get">立即领取</string>
    <string name="stage_limit_open">查看全部额度</string>
    <string name="stage_limit_auth_continue">继续认证</string>
    <string name="stage_repaymenting_count">有%s笔正在还款中</string>
    <string name="stage_limit_cash">借贷额度</string>
    <string name="stage_limit_online">购物额度</string>
    <string name="stage_login_regist">点我开启信用生活</string>
    <string name="stage_all_bill_entrance">全部账单</string>
    <string name="stage_settle_ahead_entrance">提前结清</string>
    <string name="stage_repay_entrance">立即还款</string>
    <string name="stage_not_out_bill">未出账单(元)</string>
    <string name="stage_out_bill">已出账单待还（元）</string>
    <string name="rr_identification_err">认证出错，请重新认证</string>
    <string name="rr_identification_success">认证成功</string>
    <string name="credit_promote_tips">添加个人信息，有助于全面的额度评分</string>
    <string name="credit_base_tips">基本信息</string>
    <string name="credit_use_tips">完成以下操作，即可借款</string>
    <string name="credit_promote_title">信用等级</string>
    <string name="credit_promote_update">评估时间：%s</string>
    <string name="credit_iv_score_title">反欺诈认证</string>
    <string name="credit_td_score_title">人人授信</string>
    <string name="credit_promote_auth_title">信用认证</string>
    <string name="credit_promote_phone">运营商认证</string>
    <string name="credit_promote_phone_err">运营商认证失败,\n请重试</string>
    <string name="credit_promote_auth">已认证</string>
    <string name="credit_promote_do_auth">未认证</string>
    <string name="credit_promote_phone_bind">已认证</string>
    <string name="credit_promote_phone_unbind">未认证</string>
    <string name="credit_promote_phone_update">您已进行运营商认证,\n是否需要进行更新</string>
    <string name="credit_promote_contact">社交认证</string>
    <string name="credit_promote_contact_hit"> 未同步</string>
    <string name="credit_promote_contact_bind">已同步</string>
    <string name="credit_promote_contact_update">通讯录已认证,是否进行\n重新认证</string>
    <string name="credit_promote_mail">邮箱地址</string>
    <string name="credit_promote_mail_bind">已绑定</string>
    <string name="credit_promote_mail_unbind">未绑定</string>
    <string name="credit_promote_contact_bind_success">通讯录匹配成功</string>
    <string name="credit_promote_contact_bind_err">通讯录匹配失败,\n请重试</string>
    <string name="credit_promote_bind_card_success">银行卡绑定失败,\n请重试</string>
    <string name="credit_promote_bind_card_err">银行卡绑定成功</string>
    <string name="credit_promote_bind_card_update">您已绑定一张银行卡，是\n否需要进行更换？</string>
    <string name="credit_idf_toast">已认证，无需重复认证</string>
    <string name="credit_contact_toast">通讯录已认证</string>
    <string name="credit_promote_location_toast">定位出错，请重新定位</string>
    <string name="credit_promote_location_dialog">正在定位中</string>
    <string name="credit_promote_location_update">您已经定位,\n是否需要重新定位</string>
    <string name="credit_promote_submit_wait_minutes">已提交申请，预计3分钟处理完成</string>
    <string name="credit_promote_submit_wait">等待处理</string>
    <string name="credit_promote_submit_complete">完成</string>
    <string name="text_fanbeipay_other_agreement">《服务协议》</string>
    <string name="text_loan_agreement">《借款协议》</string>
    <string name="text_cashier_digital_certificate">《数字证书服务协议》</string>
    <string name="text_cashier_risk_prompt">《风险提示函》</string>
    <string name="text_platform_agreement">《平台服务协议》</string>
    <string name="auth_id">身份认证</string>
    <string name="auth_basic_info">基础信息</string>
    <string name="auth_limit_get">领取额度</string>
    <string name="auth_exit_dialog_title">确定退出?</string>
    <string name="auth_exit_dialog_cancel">我再想想</string>
    <string name="auth_exit_dialog_sure">去意已决</string>
    <string name="bills_paid">已出账单待还(元)</string>
    <string name="only_overdue">只看逾期</string>
    <string name="only_month_has_bill">只看本月已出</string>
    <string name="content_description"> </string>
    <string name="rr_id_confirm_name">姓&#160;&#160;&#160;&#160;名</string>
    <string name="rr_id_confirm_card">身份证</string>
    <string name="rr_id_confirm_info">身份信息</string>
    <string name="rr_id_confirm_auth">已认证</string>
    <string name="rr_id_confirm_face_info">面部信息</string>
    <string name="rr_id_confirm_face_auth">已绑定</string>
    <string name="cashier_loan_agreement">借款相关协议</string>
    <string name="cashier_agreement_cancel">取消</string>
    <string name="id_confirm_sure">确定</string>
    <string name="id_confirm_check_name">请检查身份信息，姓名有误可直接修改请检查</string>
    <string name="id_confirm_check">姓名</string>
    <string name="id_confirm_card">身份证</string>
    <string name="id_confirm_retake">返回重拍</string>
</resources>