<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:background="@drawable/shape_circle_agreement_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/y30">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/cashier_loan_agreement"
        android:textColor="#030303"
        android:textSize="@dimen/x30" />

    <TextView
        android:id="@+id/txt_agreement_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/text_fanbeipay_other_agreement"
        android:textColor="@color/text_color_cashier_agreement"
        android:textSize="@dimen/x30" />

    <TextView
        android:id="@+id/txt_agreement_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/text_loan_agreement"
        android:textColor="@color/text_color_cashier_agreement"
        android:textSize="@dimen/x30" />

    <TextView
        android:id="@+id/txt_agreement_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/text_cashier_digital_certificate"
        android:textColor="@color/text_color_cashier_agreement"
        android:textSize="@dimen/x30" />

    <TextView
        android:id="@+id/txt_agreement_forth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/text_cashier_risk_prompt"
        android:textColor="@color/text_color_cashier_agreement"
        android:textSize="@dimen/x30" />

    <TextView
        android:id="@+id/txt_agreement_fifth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/text_platform_agreement"
        android:textColor="@color/text_color_cashier_agreement"
        android:textSize="@dimen/x30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/y60"
        android:background="#4d4d4d" />

    <TextView
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y30"
        android:gravity="center"
        android:text="@string/cashier_agreement_cancel"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/x34" />
</LinearLayout>