<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="26dp">

    <TextView
        android:id="@+id/billsPaid"
        android:paddingTop="33dp"
        android:paddingBottom="11.5dp"
        android:text="@string/bills_paid"
        android:textSize="16sp"
        android:textColor="@color/color_232323"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/onlyOverdue"
        android:paddingTop="11.5dp"
        android:paddingBottom="11.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/color_646464"
        android:text="@string/only_overdue"/>

    <TextView
        android:id="@+id/onlyMonth"
        android:paddingTop="11.5dp"
        android:paddingBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/color_646464"
        android:text="@string/only_month_has_bill"/>
</LinearLayout>