<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rrid_confirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="RtlHardcoded,RtlSymmetry,ContentDescription,RelativeOverlap">

    <com.ald.asjauthlib.widget.TitleBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rl_id_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="@dimen/y30"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_id_info"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="@dimen/y80">

        <TextView
            android:id="@+id/lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y80"
            android:text="@string/rr_id_confirm_name"
            android:textColor="#c6c6c6"
            android:textSize="@dimen/y35" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/y30"
            android:layout_marginTop="@dimen/y80"
            android:layout_toRightOf="@+id/lbl_name"
            android:textColor="#373747"
            android:textSize="@dimen/y35" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_name"
            android:layout_marginTop="@dimen/y60"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y30"
                android:text="@string/rr_id_confirm_card"
                android:textColor="#c6c6c6"
                android:textSize="@dimen/x35" />

            <TextView
                android:id="@+id/txt_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/y30"
                android:textColor="#373747"
                android:textSize="@dimen/y35" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/line_top"
        style="@style/hLineStyle"
        android:layout_below="@+id/rl_id_info"
        android:layout_marginTop="@dimen/y30"
        android:background="#dedede" />

    <RelativeLayout
        android:id="@+id/rl_id_info_status"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:layout_below="@+id/line_top"
        android:layout_marginLeft="@dimen/y40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rr_id_confirm_info"
            android:textColor="#373747"
            android:textSize="@dimen/y35"/>

        <ImageView
            android:id="@+id/ic_id_auth_ok"
            android:layout_width="@dimen/y30"
            android:layout_height="@dimen/y30"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/y30"
            android:src="@drawable/ic_auth_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/y20"
            android:layout_toLeftOf="@+id/ic_id_auth_ok"
            android:text="@string/rr_id_confirm_auth"
            android:textColor="#ff6e34" />

    </RelativeLayout>

    <View
        android:id="@+id/line_mid"
        style="@style/hLineStyle"
        android:layout_below="@+id/rl_id_info_status"
        android:background="#dedede" />

    <RelativeLayout
        android:id="@+id/rl_face_info_status"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:layout_below="@+id/line_mid"
        android:layout_marginLeft="@dimen/y40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rr_id_confirm_face_info"
            android:textColor="#373747"
            android:textSize="@dimen/y35"/>

        <ImageView
            android:id="@+id/ic_face_auth_ok"
            android:layout_width="@dimen/y30"
            android:layout_height="@dimen/y30"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/y30"
            android:src="@drawable/ic_auth_ok" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/y20"
            android:layout_toLeftOf="@+id/ic_face_auth_ok"
            android:text="@string/rr_id_confirm_face_auth"
            android:textColor="#ff6e34" />

    </RelativeLayout>

    <View
        style="@style/hLineStyle"
        android:layout_below="@+id/rl_face_info_status"
        android:background="#dedede" />


</RelativeLayout>
