<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:background="@drawable/shape_circle_tel_phone"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/y40"
        android:layout_marginTop="22dp"
        android:gravity="left"
        android:text="@string/auth_exit_dialog_title"

        android:textColor="@color/text_important_color"
        android:textSize="@dimen/x36" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:layout_marginTop="19dp"
        android:gravity="left"
        android:textColor="@color/text_gray_color"
        android:textSize="@dimen/x30" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y96"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/x5"
            android:layout_marginRight="@dimen/y30"
            android:background="@drawable/rectangle_btn"
            android:gravity="center"
            android:text="@string/auth_exit_dialog_cancel"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/x32" />

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@+id/tv_cancel"
            android:background="@drawable/rectangle_btn"
            android:gravity="center"
            android:text="@string/auth_exit_dialog_sure"
            android:textColor="@color/text_important_color"
            android:textSize="@dimen/x32" />
    </RelativeLayout>
</LinearLayout>


